--- a/Respeak/res/layout/fragment_training.xml
+++ b/Respeak/res/layout/fragment_training.xml
@@ -14,7 +14,7 @@
         android:textSize="20sp" />
 
     <!-- Recording Buttons -->
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -55,15 +55,44 @@
             android:textColor="@color/light_blue" />
     </LinearLayout>
 
-     <!-- Playback Buttons -->
-     
-    <TextView
-        android:id="@+id/yourRecording"
+    <!-- Playback Buttons -->
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/your_recording"
-        android:textColor="@color/light_blue"
-        android:textStyle="bold" />
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/yourRecording"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:background="@null"
+            android:text="@string/your_recording"
+            android:textColor="@color/light_blue"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/recordAgainButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:background="@null"
+            android:text="@string/record_again"
+            android:textColor="@color/red"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/submitButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:text="@string/submit"
+            android:textColor="@color/green"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
