--- a/Respeak/res/layout/fragment_training.xml
+++ b/Respeak/res/layout/fragment_training.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/lighter_gray"
-        android:maxLines="14"
+        android:maxLines="12"
         android:scrollbars="vertical"
         android:textSize="20sp" />
 
@@ -57,45 +57,15 @@
 
     <!-- Playback Buttons -->
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/yourRecording"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:gravity="top"
-            android:text="@string/your_recording"
-            android:textColor="@color/light_blue"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/recordAgainButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:gravity="top"
-            android:background="@null"
-            android:text="@string/record_again"
-            android:textColor="@color/red"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/submitButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="top"
-            android:background="@null"
-            android:text="@string/submit"
-            android:textColor="@color/green"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-            
-    </LinearLayout>
+    <TextView
+        android:id="@+id/yourRecording"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        android:gravity="top"
+        android:text="@string/your_recording"
+        android:textColor="@color/light_blue"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -134,5 +104,27 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@drawable/play_button_selector" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingTop="10dp" >
+        
+        <ImageButton
+            android:id="@+id/recordAgainButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/record_again" />
+        
+        
+        <ImageButton
+            android:id="@+id/submitButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/submit" />
+       
+    </LinearLayout>
 
 </LinearLayout>
