--- a/Respeak/res/menu/all_options_menu.xml
+++ b/Respeak/res/menu/all_options_menu.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    
+
     <item
         android:id="@+id/menu_item_settings"
+        android:icon="@android:drawable/ic_menu_preferences"
         android:orderInCategory="1"
-        android:title="@string/settings"
-        android:showAsAction="never"/>
+        android:showAsAction="never"
+        android:title="@string/settings"/>
+
 </menu>
