--- a/Respeak/res/xml/preferences.xml
+++ b/Respeak/res/xml/preferences.xml
@@ -4,16 +4,23 @@
     <PreferenceCategory
         android:key="user_settings"
         android:title="@string/pref_user_settings" >
-        
         <EditTextPreference
             android:key="phone_number"
             android:summary="@string/pref_phone_number_summ"
             android:title="@string/pref_phone_number" />
-        
-         <EditTextPreference
+        <EditTextPreference
             android:key="full_name"
             android:summary="@string/pref_full_name_summ"
             android:title="@string/pref_full_name" />
+    </PreferenceCategory>
+    	
+    <PreferenceCategory
+        android:key="about"
+        android:title="@string/pref_about" >
+        <Preference
+    	    android:key="version_num"
+    	    android:summary="@string/pref_version_num_summ"
+    	    android:title="@string/pref_version_num" />
     </PreferenceCategory>
 
 </PreferenceScreen>
