--- a/Respeak/res/menu/all_options_menu.xml
+++ b/Respeak/res/menu/all_options_menu.xml
@@ -7,11 +7,18 @@
         android:orderInCategory="1"
         android:showAsAction="ifRoom|withText" 
         android:title="@string/account_history" />
+    
+    <item
+        android:id="@+id/menu_item_pay_scale"
+        android:icon="@android:drawable/ic_menu_preferences"
+        android:orderInCategory="2"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/payment_scale"/>
         
     <item
         android:id="@+id/menu_item_settings"
         android:icon="@android:drawable/ic_menu_preferences"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
         android:showAsAction="ifRoom|withText"
         android:title="@string/settings"/>
   
