--- a/Respeak/res/menu/all_options_menu.xml
+++ b/Respeak/res/menu/all_options_menu.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    
+    <item
+        android:id="@+id/menu_item_pay_scale"
+        android:icon="@drawable/ic_action_labels"
+        android:orderInCategory="1"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/payment_scale"/>
 
     <item 
         android:id="@+id/menu_item_account_history"
         android:icon="@drawable/ic_action_rupee_sign"
-        android:orderInCategory="1"
-        android:showAsAction="ifRoom|withText"
-        android:title="@string/account_history" />
-    
-    <item
-        android:id="@+id/menu_item_pay_scale"
-        android:icon="@android:drawable/ic_menu_preferences"
         android:orderInCategory="2"
         android:showAsAction="ifRoom|withText"
-        android:title="@string/payment_scale"/>
+        android:title="@string/account_history" />
         
     <item
         android:id="@+id/menu_item_settings"
         android:icon="@android:drawable/ic_menu_preferences"
         android:orderInCategory="3"
-        android:showAsAction="ifRoom|withText"
+        android:showAsAction="never"
         android:title="@string/settings"/>
   
 </menu>
